tests/baselines/reference/binaryArithmatic3.errors.txt
tests/cases/compiler/binaryArithmatic3.ts(1,9): error TS18047: 'undefined' is possibly 'undefined'.
tests/cases/compiler/binaryArithmatic3.ts(1,21): error TS18047: 'undefined' is possibly 'undefined'.


==== tests/cases/compiler/binaryArithmatic3.ts (2 errors) ====
    var v = undefined | undefined;
            ~~~~~~~~~
!!! error TS18047: 'undefined' is possibly 'undefined'.
                        ~~~~~~~~~
!!! error TS18047: 'undefined' is possibly 'undefined'.